# GangOfSix214

./: .gitignore  AirCraft.cpp  AirCraft.h  Alliance.cpp  Alliance.h  Bomb.cpp  Country.cpp  Country.h  CountryIterator.cpp  CountryIterator.h  CountryObserver.cpp  CountryObserver.h  CountryObserverIterator.cpp  CountryObserverIterator.h  ExplosiveFactory.cpp  ExplosiveFactory.h  FireArmFactory.cpp  FireArmFactory.h  IndividualCountry.cpp  IndividualCountry.h  IteratorTool.h  MachineGun.cpp  MachineGun.h  Medic.cpp  Medic.h  MedicFactory.cpp  MedicFactory.h  Missile.cpp  Missile.h  README.md  Rifle.cpp  Rifle.h  Soldier.cpp  Soldier.h  SoldierFactory.cpp  SoldierFactory.h  WarParticipant.cpp  WarParticipant.h  WarParticipantFactory.cpp  WarParticipantFactory.h  (+6 more)
Alliance (composite)/: Alliance.cpp  Alliance.h
Data/: Project_updt1_2 (1).vpp
Min project/: AirCraft.cpp  AirCraft.h  Attack.cpp  Attack.h  Bomb.cpp  (+36 more)
System/: AirCraft.cpp  AirCraft.h  AirSpace.cpp  AirSpace.h  Alliance.cpp  Alliance.h  Attack.cpp  Attack.h  AttackStrategy.h  BattleState.cpp  BattleState.h  Bomb.cpp  Bomb.h  CMakeLists.txt  Context.cpp  Context.h  Country.cpp  Country.h  CountryBackup.cpp  CountryBackup.h  CountryIterator.cpp  CountryIterator.h  CountryMemory.h  CountryObserver.cpp  CountryObserver.h  CountryObserverIterator.cpp  CountryObserverIterator.h  Defend.cpp  Defend.h  DetonateExplosives.cpp  DetonateExplosives.h  ExplosiveFactory.cpp  ExplosiveFactory.h  FireArmFactory.cpp  FireArmFactory.h  FireMissile.cpp  FireMissile.h  IndividualCountry.cpp  IndividualCountry.h  IteratorTool.cpp  (+49 more)
(+68 files in other folders)
