cmake_minimum_required(VERSION 3.23)
project(ProjectAssignment)

set(CMAKE_CXX_STANDARD 11)

add_executable(ProjectAssignment ObservingAllies.cpp Medics.cpp Rifleman.cpp MachineGunner.cpp WarTransportFactory.cpp AirCraft.cpp Attack.cpp Context.cpp Defend.cpp DetonateExplosives.cpp FireMissile.cpp RequestAlliance.h CountryIterator.cpp Shoot.cpp Surrender.cpp main.cpp BattleState.cpp Bomb.cpp CountryObserver.cpp ExplosiveFactory.cpp FireArmFactory.cpp IndividualCountry.cpp  IteratorTool.cpp Missile.cpp Soldier.cpp SoldierFactory.cpp WarParticipant.cpp WarShip.cpp WarParticipantIterator.cpp CountryObserverIterator.cpp WarParticipantFactory.cpp AirSpace.cpp Alliance.cpp Country.cpp Country.h CountryBackup.cpp CountryBackup.h CountryMemory.cpp CountryMemory.h WarTheatre.cpp WarTheatre.h BattleState.cpp BattleState.h AirSpace.cpp AirSpace.h Land.cpp Land.h Sea.cpp Sea.h State.cpp)
